--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,109 @@
-html,body {
-    color:white;
-    background-color: #000;
-    font-family: 'IBM Plex Mono', monospace;
+html, body {
+    font-family: "IBM Plex Sans", sans-serif;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: linear-gradient(#fffc 0%, #fffc 100%),linear-gradient(to bottom right, blue 0%, deepskyblue 50%, skyblue 100%)
 }
 
-div.terminalOutput {
-    font-size:12px;
-    white-space:pre;
+h1, h2, h3, h4, h5 {
+    margin: 5px;
+}
+
+p {
+    margin: 0px;
+}
+
+.logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    animation: slide-up-logo 1s 1s forwards;
+    opacity: 0;
+    width: 150px;
+    height: 150px;
+    margin: 0 5px;
+    margin-top: -30px;
+}
+
+.header {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    animation: slide-up-header 1s 1.5s forwards;
+    opacity: 0;
+    margin-top: 70px;
+    margin-bottom:45px;
+    font-size: 35px;
+    font-weight: 100;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.sub-header {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    animation: slide-up-sub-header 1s 1.9s forwards;
+    opacity: 0;
+    margin: 0 5px;
+    margin-top: 100px;
+    font-weight: 100;
+    margin-bottom:45px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+
+@keyframes slide-up-logo {
+    from {
+        opacity: 0;
+        top: calc(50% + 75px);
+    }
+    to {
+        opacity: 1;
+        top: 50%;
+    }
+}
+
+@keyframes slide-up-header {
+    from {
+        opacity: 0;
+        top: calc(50% + 40px);
+    }
+    to {
+        opacity: 1;
+        top: 50%;
+    }
+}
+
+@keyframes slide-up-sub-header {
+    from {
+        opacity: 0;
+        top: calc(50% + 20px);
+    }
+    to {
+        opacity: 0.5;
+        top: 50%;
+    }
+}
+
+* {
+    outline: none !important;
+    user-select: none !important;
 }
