--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,9 @@ span.material-icons {
 div.header-bar {
     width: calc(100% - 20px);
     padding: 10px;
+    opacity: 0;
+    margin-top:-20px;
+    animation: header-bar 1s 2s forwards;
 }
 
 div.header-bar button {
@@ -151,7 +154,6 @@ div.header-bar button:active {
 div.header-bar button.selected {
     border-bottom: dodgerblue 0.2em solid;
     padding-bottom:5px;
-    color:dodgerblue
 }
 
 @keyframes slide-up-logo {
@@ -196,4 +198,20 @@ div.header-bar button.selected {
         opacity: 1;
         top: 50%;
     }
+}
+
+@keyframes header-bar {
+    from {
+        opacity: 0;
+        margin-top:-20px;
+    }
+
+    to {
+        opacity: 1;
+        margin-top:0;
+    }
+}
+
+* {
+    transition:all 0.3s;
 }
