--- a/css/phone.css
+++ b/css/phone.css
@@ -6,9 +6,12 @@
     font-size: 1em;
     margin-top: 80px;
     margin: 98px 5px;
-
 }
 
 .header-bar {
     text-align: center;
+}
+
+::-webkit-scrollbar {
+    width: 2.5px;
 }
